# sbt-compression-benchmarks

./: .gitignore  Cargo.toml  gzip_1.txt  gzip_12.txt  gzip_2.txt  gzip_3.txt  gzip_5.txt  lz4_5.txt  lz4_9.txt  snappy.txt
compressions/: Cargo.toml  gzip_7.txt  lz4_1.txt  lz4_12.txt  lz4_2.txt  lz4_7.txt  notes.md  zstd_ootb.txt
compressions/src/: lib.rs  timeit.rs
src/: lib.rs  timeit.rs
