[package]
name = "compressions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sb-backend-3-actix = { path = "../sb-backend-3-actix" }
actix              = "0.13.0"
rdkafka            = { version = "0.28.0", features = ["zstd"]}
rdkafka-sys        = "4.2.0+1.8.2"
serde_json         = "1.0.82"
# zstd-sys           = "2.0.1+zstd.1.4.4"